基本恢复初始版

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <meta name="description" content="颓废动画人的个人网站，涂鸦和作品练习.扯淡的东西. This site is a portfolio of Ray art. Hope you enjoy it!" />
 <meta name="author" content="ray,ruizhenxin,rzx.me">
 <meta http-equiv="refresh" content="600" />
-<link rel="icon" href="favicon.ico" type="x-icon" />
-<link rel="apple-touch-icon" href="touch-icon-iphone.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone4.png" />
-<link REL="SHORTCUT ICON" HREF="favicon.ico" type="x-icon" />
+<link rel="icon" href="img/Avatar100X100.jpg" type="image/jpeg" />
+<link rel="apple-touch-icon" href="web/images/touch-icon-iphone.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="web/images/touch-icon-ipad.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="web/images/touch-icon-iphone4.png" />
+<link REL="SHORTCUT ICON" HREF="img/Avatar100X100.jpg" type="image/jpeg" />
 <link href="css/home_style.css" rel="stylesheet" type="text/css" />
 <script src="Scripts/jquery-1.9.1.min.js" type="text/javascript">
 </script>
@@ -43,14 +43,14 @@
 				<script language="JavaScript"> 
 				  <!-- 
 				  imglink=new Date(); 
-				  var thisimg="http://pic.rzx.me/rzxme/img/home/fin1-13-1.jpg"; 
-				  if(imglink.getSeconds()<31){var thisimg="http://pic.rzx.me/rzxme/img/home/fin2.jpg";} 
-				  if(imglink.getSeconds()<21){var thisimg="http://pic.rzx.me/rzxme/img/home/fin3.jpg";} 
-				  if(imglink.getSeconds()<18){var thisimg="http://pic.rzx.me/rzxme/img/home/fin5.jpg";} 
-				  if(imglink.getSeconds()<15){var thisimg="http://pic.rzx.me/rzxme/img/home/fin6.jpg";} 
-				  if(imglink.getSeconds()<12){var thisimg="http://pic.rzx.me/rzxme/img/home/fin7.jpg";} 
-				  if(imglink.getSeconds()<10){var thisimg="http://pic.rzx.me/rzxme/img/home/fin8.jpg";} 
-				  if(imglink.getSeconds()<6){var thisimg="http://pic.rzx.me/rzxme/img/home/fin2.jpg";} 
+				  var thisimg="img/home/fin1-13-1.jpg"; 
+				  if(imglink.getSeconds()<31){var thisimg="img/home/fin2.jpg";} 
+				  if(imglink.getSeconds()<21){var thisimg="img/home/fin3.jpg";} 
+				  if(imglink.getSeconds()<18){var thisimg="img/home/fin5.jpg";} 
+				  if(imglink.getSeconds()<15){var thisimg="img/home/fin6.jpg";} 
+				  if(imglink.getSeconds()<12){var thisimg="img/home/fin7.jpg";} 
+				  if(imglink.getSeconds()<10){var thisimg="img/home/fin8.jpg";} 
+				  if(imglink.getSeconds()<6){var thisimg="img/home/fin2.jpg";} 
 				  document.write("<img src="+thisimg+" border=0 alt=’我自己喜欢的一些图片！’>"); 
 				  //--> 
 				</script> 
