--- a/web/Animation.html
+++ b/web/Animation.html
@@ -41,53 +41,53 @@
             <div class="video">
            	  <div class="video-x">
            	  <div class="shipin00">
-            	<video poster="http://pic.rzx.me/rzxme/web/movie/shooting-01.jpg" id="movie" preload controls  width=355 height=200>
- <source src='http://pic.rzx.me/rzxme/web/movie/shooting-01.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
- <source src='http://pic.rzx.me/rzxme/web/movie/shooting-01.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
+            	<video poster="videos/shooting-01.jpg" id="movie" preload controls  width=355 height=200>
+ <source src='videos/shooting-01.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
+ <source src='videos/shooting-01.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
 				</video>
             	</div>
            	  </div>
-           	  <div class="video-x"> 
+           	  <div class="video-x">
               	<div id="shipin05">
-            	<video poster="http://pic.rzx.me/rzxme/web/movie/flower.jpg" id="movie" preload controls  width=355 height=200>
- <source src='http://pic.rzx.me/rzxme/web/movie/flower.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
- <source src='http://pic.rzx.me/rzxme/web/movie/flower.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
- <div class="html5-tip"><p><img src="'http://pic.rzx.me/rzxme/web/movie/html5-150.png" /></p>
+            	<video poster="videos/flower.jpg" id="movie" preload controls  width=355 height=200>
+ <source src='videos/flower.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
+ <source src='videos/flower.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
+ <div class="html5-tip"><p><img src="videos/html5-150.png" /></p>
  <p>本页面视频采用HTML5标准</p>
  <p>请使用<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh">Chrome</a>,Firefox,或者Safari浏览该网页.</p>
  </div>
             	</video>
             	</div>
-              </div>	
+              </div>
            	  <div class="video-x">
               	<div class="shipin05">
-            	<video poster="http://pic.rzx.me/rzxme/web/movie/dragonfire.jpg" id="movie" preload controls  width=355 height=200>
- <source src='http://pic.rzx.me/rzxme/web/movie/dragonfire.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
- <source src='http://pic.rzx.me/rzxme/web/movie/dragonfire.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
+            	<video poster="videos/dragonfire.jpg" id="movie" preload controls  width=355 height=200>
+ <source src='videos/dragonfire.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
+ <source src='videos/dragonfire.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
 				</video>
             	</div>
               </div>
               <div class="video-x">
               	<div class="shipin00">
-            	<video poster="http://pic.rzx.me/rzxme/web/movie/begin-01.jpg" id="movie" preload controls  width=355 height=200>
- <source src='http://pic.rzx.me/rzxme/web/movie/begin-01.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
- <source src='http://pic.rzx.me/rzxme/web/movie/begin-01.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
+            	<video poster="videos/begin-01.jpg" id="movie" preload controls  width=355 height=200>
+ <source src='videos/begin-01.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
+ <source src='videos/begin-01.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
 				</video>
             	</div>
               </div>
               <div class="video-x">
               	<div class="shipin00">
-            	<video poster="http://pic.rzx.me/rzxme/web/movie/Gunman.jpg" id="movie" preload controls  width=355 height=200>
- <source src='http://pic.rzx.me/rzxme/web/movie/Gunman.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
- <source src='http://pic.rzx.me/rzxme/web/movie/Gunman.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
+            	<video poster="videos/Gunman.jpg" id="movie" preload controls  width=355 height=200>
+ <source src='videos/Gunman.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
+ <source src='videos/Gunman.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
 				</video>
             	</div>
               </div>
               <div class="video-x">
               	<div class="shipin00">
-            	<video poster="http://pic.rzx.me/rzxme/web/movie/gun-shooting.jpg" id="movie" preload controls  width=355 height=200>
- <source src='http://pic.rzx.me/rzxme/web/movie/gun-shooting.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
- <source src='http://pic.rzx.me/rzxme/web/movie/gun-shooting.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
+            	<video poster="videos/gun-shooting.jpg" id="movie" preload controls  width=355 height=200>
+ <source src='videos/gun-shooting.mp4' type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'/>
+ <source src='videos/gun-shooting.webm' type='video/webm; codecs="vp8.0, vorbis"'/>
 				</video>
             	</div>
               </div>
