--- a/web/MagicUbuntu.html
+++ b/web/MagicUbuntu.html
@@ -66,6 +66,6 @@ p{paddin-bottom:1em; color:#666;}
 </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b>
 </div>
-<p align="center"><img src="http://pic.rzx.me/rzxme/web/images/Ubuntu神奇.jpg" width="800" height="1093" alt="MagicUbuntu" /></p>
+<p align="center"><img src="/web/images/Ubuntu神奇.jpg" width="800" height="1093" alt="MagicUbuntu" /></p>
 </body>
 </html>
