--- a/web/sketch.html
+++ b/web/sketch.html
@@ -37,225 +37,225 @@
 			<div id="pp_thumbContainer">
 				<div class="album">
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album1/thumbs/1.jpg" alt="http://pic.rzx.me/rzxme/web/images/album1/1.jpg" />
+						<img src="images/album1/thumbs/1.jpg" alt="images/album1/1.jpg" />
 						<span>PLANT</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album1/thumbs/2.jpg" alt="http://pic.rzx.me/rzxme/web/images/album1/2.jpg" />
+						<img src="images/album1/thumbs/2.jpg" alt="images/album1/2.jpg" />
 						<span>PLANT</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album1/thumbs/3.jpg" alt="http://pic.rzx.me/rzxme/web/images/album1/3.jpg" />
+						<img src="images/album1/thumbs/3.jpg" alt="images/album1/3.jpg" />
 						<span>PLANT</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album1/thumbs/4.jpg" alt="http://pic.rzx.me/rzxme/web/images/album1/4.jpg" />
+						<img src="images/album1/thumbs/4.jpg" alt="images/album1/4.jpg" />
 						<span>PLANT</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album1/thumbs/5.jpg" alt="http://pic.rzx.me/rzxme/web/images/album1/5.jpg" />
+						<img src="images/album1/thumbs/5.jpg" alt="images/album1/5.jpg" />
 						<span>PLANT</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album1/thumbs/6.jpg" alt="http://pic.rzx.me/rzxme/web/images/album1/6.jpg" />
+						<img src="images/album1/thumbs/6.jpg" alt="images/album1/6.jpg" />
 						<span>PLANT</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album1/thumbs/7.jpg" alt="http://pic.rzx.me/rzxme/web/images/album1/7.jpg" />
+						<img src="images/album1/thumbs/7.jpg" alt="images/album1/7.jpg" />
 						<span>PLANT</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album1/thumbs/8.jpg" alt="http://pic.rzx.me/rzxme/web/images/album1/8.jpg" />
+						<img src="images/album1/thumbs/8.jpg" alt="images/album1/8.jpg" />
 						<span>PLANT</span>
 					</div>
 					<div class="descr">NATURE</div>
                     				</div>
                 <div class="album">
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album2/thumbs/1.jpg" alt="http://pic.rzx.me/rzxme/web/images/album2/1.jpg" />
+						<img src="images/album2/thumbs/1.jpg" alt="images/album2/1.jpg" />
 						<span>JUST A CRAB</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album2/thumbs/2.jpg" alt="http://pic.rzx.me/rzxme/web/images/album2/2.jpg" />
+						<img src="images/album2/thumbs/2.jpg" alt="images/album2/2.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album2/thumbs/3.jpg" alt="http://pic.rzx.me/rzxme/web/images/album2/3.jpg" />
+						<img src="images/album2/thumbs/3.jpg" alt="images/album2/3.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album2/thumbs/4.jpg" alt="http://pic.rzx.me/rzxme/web/images/album2/4.jpg" />
+						<img src="images/album2/thumbs/4.jpg" alt="images/album2/4.jpg" />
 						<span>PARK SCENE</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album2/thumbs/5.jpg" alt="http://pic.rzx.me/rzxme/web/images/album2/5.jpg" />
+						<img src="images/album2/thumbs/5.jpg" alt="images/album2/5.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album2/thumbs/6.jpg" alt="http://pic.rzx.me/rzxme/web/images/album2/6.jpg" />
+						<img src="images/album2/thumbs/6.jpg" alt="images/album2/6.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album2/thumbs/7.jpg" alt="http://pic.rzx.me/rzxme/web/images/album2/7.jpg" />
+						<img src="images/album2/thumbs/7.jpg" alt="images/album2/7.jpg" />
 						<span>SAW SEVEN</span>
 					</div>
 					<div class="descr">FASHION</div>
                     				</div>
                 <div class="album">
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album3/thumbs/1.jpg" alt="http://pic.rzx.me/rzxme/web/images/album3/1.jpg" />
+						<img src="images/album3/thumbs/1.jpg" alt="images/album3/1.jpg" />
 						<span>FIGHT CLUB</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album3/thumbs/2.jpg" alt="http://pic.rzx.me/rzxme/web/images/album3/2.jpg" />
+						<img src="images/album3/thumbs/2.jpg" alt="images/album3/2.jpg" />
 						<span>SOLDIER</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album3/thumbs/3.jpg" alt="http://pic.rzx.me/rzxme/web/images/album3/3.jpg" />
+						<img src="images/album3/thumbs/3.jpg" alt="images/album3/3.jpg" />
 						<span>OH MY LEFT HAND!</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album3/thumbs/4.jpg" alt="http://pic.rzx.me/rzxme/web/images/album3/4.jpg" />
+						<img src="images/album3/thumbs/4.jpg" alt="images/album3/4.jpg" />
 						<span>FLU ?</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album3/thumbs/5.jpg" alt="http://pic.rzx.me/rzxme/web/images/album3/5.jpg" />
+						<img src="images/album3/thumbs/5.jpg" alt="images/album3/5.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album3/thumbs/6.jpg" alt="http://pic.rzx.me/rzxme/web/images/album3/6.jpg" />
+						<img src="images/album3/thumbs/6.jpg" alt="images/album3/6.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album3/thumbs/7.jpg" alt="http://pic.rzx.me/rzxme/web/images/album3/7.jpg" />
+						<img src="images/album3/thumbs/7.jpg" alt="images/album3/7.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album3/thumbs/8.jpg" alt="http://pic.rzx.me/rzxme/web/images/album3/8.jpg" />
+						<img src="images/album3/thumbs/8.jpg" alt="images/album3/8.jpg" />
 						<span>CHOPPER</span>
 					</div>
 					<div class="descr">MAYBE A STORY</div>
                     				</div>
 <div class="album">
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album4/thumbs/1.jpg" alt="http://pic.rzx.me/rzxme/web/images/album4/1.jpg" />
+						<img src="images/album4/thumbs/1.jpg" alt="images/album4/1.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album4/thumbs/2.jpg" alt="http://pic.rzx.me/rzxme/web/images/album4/2.jpg" />
+						<img src="images/album4/thumbs/2.jpg" alt="images/album4/2.jpg" />
 						<span>SOLDIER</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album4/thumbs/3.jpg" alt="http://pic.rzx.me/rzxme/web/images/album4/3.jpg" />
+						<img src="images/album4/thumbs/3.jpg" alt="images/album4/3.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album4/thumbs/4.jpg" alt="http://pic.rzx.me/rzxme/web/images/album4/4.jpg" />
+						<img src="images/album4/thumbs/4.jpg" alt="images/album4/4.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album4/thumbs/5.jpg" alt="http://pic.rzx.me/rzxme/web/images/album4/5.jpg" />
+						<img src="images/album4/thumbs/5.jpg" alt="images/album4/5.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album4/thumbs/6.jpg" alt="http://pic.rzx.me/rzxme/web/images/album4/6.jpg" />
+						<img src="images/album4/thumbs/6.jpg" alt="images/album4/6.jpg" />
 						<span>SKETCH</span>
 					</div>
                     			<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album4/thumbs/7.jpg" alt="http://pic.rzx.me/rzxme/web/images/album4/7.jpg" />
+						<img src="images/album4/thumbs/7.jpg" alt="images/album4/7.jpg" />
 						<span>KING AND PHOENIX</span>
 					</div>
                     			<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album4/thumbs/8.jpg" alt="http://pic.rzx.me/rzxme/web/images/album4/8.jpg" />
+						<img src="images/album4/thumbs/8.jpg" alt="images/album4/8.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="descr">THIS MY WORLD</div>
 				</div>
 <div class="album">
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album5/thumbs/1.jpg" alt="http://pic.rzx.me/rzxme/web/images/album5/1.jpg" />
+						<img src="images/album5/thumbs/1.jpg" alt="images/album5/1.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album5/thumbs/2.jpg" alt="http://pic.rzx.me/rzxme/web/images/album5/2.jpg" />
+						<img src="images/album5/thumbs/2.jpg" alt="images/album5/2.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album5/thumbs/3.jpg" alt="http://pic.rzx.me/rzxme/web/images/album5/3.jpg" />
+						<img src="images/album5/thumbs/3.jpg" alt="images/album5/3.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album5/thumbs/4.jpg" alt="http://pic.rzx.me/rzxme/web/images/album5/4.jpg" />
+						<img src="images/album5/thumbs/4.jpg" alt="images/album5/4.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album5/thumbs/5.jpg" alt="http://pic.rzx.me/rzxme/web/images/album5/5.jpg" />
+						<img src="images/album5/thumbs/5.jpg" alt="images/album5/5.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album5/thumbs/6.jpg" alt="http://pic.rzx.me/rzxme/web/images/album5/6.jpg" />
+						<img src="images/album5/thumbs/6.jpg" alt="images/album5/6.jpg" />
 						<span>CHOPPER</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album5/thumbs/7.jpg" alt="http://pic.rzx.me/rzxme/web/images/album5/7.jpg" />
+						<img src="images/album5/thumbs/7.jpg" alt="images/album5/7.jpg" />
 						<span>CHOPPER</span>
 					</div>
 					<div class="descr">Continuity</div>
 				</div>
 				<div class="album">
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/1.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/1.jpg" />
+						<img src="images/album6/thumbs/1.jpg" alt="images/album6/1.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/2.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/2.jpg" />
+						<img src="images/album6/thumbs/2.jpg" alt="images/album6/2.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/3.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/3.jpg" />
+						<img src="images/album6/thumbs/3.jpg" alt="images/album6/3.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/4.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/4.jpg" />
+						<img src="images/album6/thumbs/4.jpg" alt="images/album6/4.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/5.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/5.jpg" />
+						<img src="images/album6/thumbs/5.jpg" alt="images/album6/5.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/6.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/6.jpg" />
+						<img src="images/album6/thumbs/6.jpg" alt="images/album6/6.jpg" />
 						<span>SKETCH</span>
 					</div><div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/7.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/7.jpg" />
+						<img src="images/album6/thumbs/7.jpg" alt="images/album6/7.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/8.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/8.jpg" />
+						<img src="images/album6/thumbs/8.jpg" alt="images/album6/8.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/9.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/9.jpg" />
+						<img src="images/album6/thumbs/9.jpg" alt="images/album6/9.jpg" />
 						<span>LIU CHI</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/10.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/10.jpg" />
+						<img src="images/album6/thumbs/10.jpg" alt="images/album6/10.jpg" />
 						<span>LIU CHI</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/11.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/11.jpg" />
+						<img src="images/album6/thumbs/11.jpg" alt="images/album6/11.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/12.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/12.jpg" />
+						<img src="images/album6/thumbs/12.jpg" alt="images/album6/12.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/13.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/13.jpg" />
+						<img src="images/album6/thumbs/13.jpg" alt="images/album6/13.jpg" />
 						<span>SKETCH</span>
 					</div>
                     <div class="content">
-						<img src="http://pic.rzx.me/rzxme/web/images/album6/thumbs/14.jpg" alt="http://pic.rzx.me/rzxme/web/images/album6/14.jpg" />
+						<img src="images/album6/thumbs/14.jpg" alt="images/album6/14.jpg" />
 						<span>SKETCH</span>
 					</div>
 					<div class="descr">PERSONAL</div>
