--- a/web/Pictures.html
+++ b/web/Pictures.html
@@ -57,45 +57,45 @@
 		<h4>Animals</h4>
 <div class="width">
 		<ul class="gallery clearfix">
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/a_2.jpg" rel="prettyPhoto[gallery1]" title="..."><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/a_2.gif" width="60" height="60" alt="World of Warcraft" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/a_3.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/a_3.gif" width="60" height="60" alt="Nice Night" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/a_4.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/a_4.gif" width="60" height="60" alt="Darksiders" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/a_5.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/a_5.gif" width="60" height="60" alt="Dante horses" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/a_6.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/a_6.gif" width="60" height="60" alt="Footman Human" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/a_7.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/a_7.gif" width="60" height="60" alt="" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/a_8.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/a_8.gif" width="60" height="60" alt="" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/a_9.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/a_9.gif" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/a_2.jpg" rel="prettyPhoto[gallery1]" title="..."><img src="images/thumbnails/a_2.gif" width="60" height="60" alt="World of Warcraft" /></a></li>
+			<li><a href="images/fullscreen/a_3.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/a_3.gif" width="60" height="60" alt="Nice Night" /></a></li>
+			<li><a href="images/fullscreen/a_4.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/a_4.gif" width="60" height="60" alt="Darksiders" /></a></li>
+			<li><a href="images/fullscreen/a_5.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/a_5.gif" width="60" height="60" alt="Dante horses" /></a></li>
+            <li><a href="images/fullscreen/a_6.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/a_6.gif" width="60" height="60" alt="Footman Human" /></a></li>
+            <li><a href="images/fullscreen/a_7.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/a_7.gif" width="60" height="60" alt="" /></a></li>
+            <li><a href="images/fullscreen/a_8.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/a_8.gif" width="60" height="60" alt="" /></a></li>
+            <li><a href="images/fullscreen/a_9.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/a_9.gif" width="60" height="60" alt="" /></a></li>
 		</ul>
         </div>
 		
 			<h4>Games</h4>
 <div class="width">
 		<ul class="gallery clearfix">
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/1.jpg" rel="prettyPhoto[gallery1]" title="都是些老图了,彩图数量有限(一半都是鼠绘)充数."><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/t_1.jpg" width="60" height="60" alt="World of Warcraft" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/2.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/t_2.jpg" width="60" height="60" alt="Nice Night" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/3.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/t_3.gif" width="60" height="60" alt="Darksiders" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/4.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/t_4.jpg" width="60" height="60" alt="Sylvanas Windrunner" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/5.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/t_5.jpg" width="60" height="60" alt="Dante horses" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/6.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/t_6.jpg" width="60" height="60" alt="Footman Human" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/7.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/t_7.jpg" width="60" height="60" alt="" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/p01.jpg" rel="prettyPhoto"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/p_1.jpg" width="60" height="60" alt="" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/8.jpg" rel="prettyPhoto[gallery1]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/t_8.jpg" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/1.jpg" rel="prettyPhoto[gallery1]" title="都是些老图了,彩图数量有限(一半都是鼠绘)充数."><img src="images/thumbnails/t_1.jpg" width="60" height="60" alt="World of Warcraft" /></a></li>
+			<li><a href="images/fullscreen/2.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/t_2.jpg" width="60" height="60" alt="Nice Night" /></a></li>
+			<li><a href="images/fullscreen/3.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/t_3.gif" width="60" height="60" alt="Darksiders" /></a></li>
+			<li><a href="images/fullscreen/4.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/t_4.jpg" width="60" height="60" alt="Sylvanas Windrunner" /></a></li>
+			<li><a href="images/fullscreen/5.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/t_5.jpg" width="60" height="60" alt="Dante horses" /></a></li>
+            <li><a href="images/fullscreen/6.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/t_6.jpg" width="60" height="60" alt="Footman Human" /></a></li>
+            <li><a href="images/fullscreen/7.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/t_7.jpg" width="60" height="60" alt="" /></a></li>
+            <li><a href="images/fullscreen/p01.jpg" rel="prettyPhoto"><img src="images/thumbnails/p_1.jpg" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/8.jpg" rel="prettyPhoto[gallery1]"><img src="images/thumbnails/t_8.jpg" width="60" height="60" alt="" /></a></li>
 		</ul>
         </div>	
 
 		<h4>Gallery comic</h4>
         <div class="width">
 		<ul class="gallery clearfix">
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/c01.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/c_1.jpg" width="60" height="60" alt="" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/c02.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/c_2.jpg" width="60" height="60" alt="" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/d01.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/d_1.jpg" width="60" height="60" alt="" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/c03.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/c_3.jpg" width="60" height="60" alt="" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/c04.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/c_4.jpg" width="60" height="60" alt="" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/c05.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/c_5.jpg" width="60" height="60" alt="" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/c06.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/c_6.jpg" width="60" height="60" alt="" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/c07.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/c_7.jpg" width="60" height="60" alt="" /></a></li>
-            <li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/c08.jpg" rel="prettyPhoto[gallery2]"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/c_8.jpg" width="60" height="60" alt="" /></a></li>
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/s01.jpg" rel="prettyPhoto" title="&lt;a href=&#x27;http://www.ruizhenxin.com/blog&#x27; target=&#x27;_blank&#x27; &gt;This will open [My Blog] in a new window&lt;/a&gt;"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/s_1.jpg" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/c01.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/c_1.jpg" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/c02.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/c_2.jpg" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/d01.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/d_1.jpg" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/c03.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/c_3.jpg" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/c04.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/c_4.jpg" width="60" height="60" alt="" /></a></li>
+            <li><a href="images/fullscreen/c05.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/c_5.jpg" width="60" height="60" alt="" /></a></li>
+            <li><a href="images/fullscreen/c06.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/c_6.jpg" width="60" height="60" alt="" /></a></li>
+            <li><a href="images/fullscreen/c07.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/c_7.jpg" width="60" height="60" alt="" /></a></li>
+            <li><a href="images/fullscreen/c08.jpg" rel="prettyPhoto[gallery2]"><img src="images/thumbnails/c_8.jpg" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/s01.jpg" rel="prettyPhoto" title="&lt;a href=&#x27;http://www.ruizhenxin.com/blog&#x27; target=&#x27;_blank&#x27; &gt;This will open [My Blog] in a new window&lt;/a&gt;"><img src="images/thumbnails/s_1.jpg" width="60" height="60" alt="" /></a></li>
 		</ul>
 </div>
 
@@ -103,7 +103,7 @@
 		<h4>Special zone</h4>
         <div class="width">
 		<ul class="gallery clearfix">
-			<li><a href="http://pic.rzx.me/rzxme/web/images/fullscreen/s02.jpg" rel="prettyPhoto" title="&lt;a href=&#x27;http://www.ruizhenxin.com/blog&#x27; target=&#x27;_blank&#x27; &gt;This will open [My Blog] in a new window&lt;/a&gt;"><img src="http://pic.rzx.me/rzxme/web/images/thumbnails/s_2.gif" width="60" height="60" alt="" /></a></li>
+			<li><a href="images/fullscreen/s02.jpg" rel="prettyPhoto" title="&lt;a href=&#x27;http://www.ruizhenxin.com/blog&#x27; target=&#x27;_blank&#x27; &gt;This will open [My Blog] in a new window&lt;/a&gt;"><img src="images/thumbnails/s_2.gif" width="60" height="60" alt="" /></a></li>
 		</ul>
 </div>
 
