--- a/web/pagedesigns.html
+++ b/web/pagedesigns.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 <!--
 body {
-	
+
 }
 -->
 #ding{
@@ -57,14 +57,14 @@ body {
       <td><div id="ding"></div>
         <div id="tu">
           <div id="t">
-            <img src="http://pic.rzx.me/rzxme/web/images/Game.jpg" align="middle" width="150" />
+            <img src="images/Game.jpg" align="middle" width="150" />
           </div>
         </div>
       <div id="di"></div></td>
       <td><div id="ding"></div>
         <div id="tu">
           <div id="t">
-            <img src="http://pic.rzx.me/rzxme/web/images/XPU.jpg" align="middle" width="150" />
+            <img src="images/XPU.jpg" align="middle" width="150" />
           </div><div id="di"></div></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
