docs(readme): expand screenshots section, show two-column images with filenames

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <meta name="description" content="颓废动画人的个人网站，涂鸦和作品练习.扯淡的东西. This site is a portfolio of Ray art. Hope you enjoy it!" />
 <meta name="author" content="ray,ruizhenxin,rzx.me">
 <meta http-equiv="refresh" content="600" />
-<link rel="icon" href="img/Avatar100X100.jpg" type="image/jpeg" />
-<link rel="apple-touch-icon" href="web/images/touch-icon-iphone.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="web/images/touch-icon-ipad.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="web/images/touch-icon-iphone4.png" />
-<link REL="SHORTCUT ICON" HREF="img/Avatar100X100.jpg" type="image/jpeg" />
-<link href="css/home_style.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" href="img/Avatar100X100.jpg" type="image/jpeg" />
+	<link rel="apple-touch-icon" href="web/images/touch-icon-iphone.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="web/images/touch-icon-ipad.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="web/images/touch-icon-iphone4.png" />
+	<link REL="SHORTCUT ICON" HREF="img/Avatar100X100.jpg" type="image/jpeg" />
+	<link href="web/css/home_style.css" rel="stylesheet" type="text/css" />
 <script src="Scripts/jquery-1.9.1.min.js" type="text/javascript">
 </script>
 <!-- 谷歌Analytics代码 -->
