refactor: rename Dream directory to dream for case-sensitivity consistency

--- a/web/comic.html
+++ b/web/comic.html
@@ -35,7 +35,7 @@
 </div></a>
 <p align="center"><font face="Comic Sans MS, cursive" color="#999999" size="3"> Test page<font size="-1">（<b>测试</b>）</font> </font></p>
 <div class="comic_pic">
-	<a href="Dream/index.html"><div class="c1"></div></a>
+	<a href="dream/index.html"><div class="c1"></div></a>
     <a href="gzjy.html"><div class="c2"></div></a>
 	<a href="Wine.html"><div class="c3"></div></a>
     <a href="MagicUbuntu.html"><div class="c4"></div></a>
