chore: update links to web/comic.html and web/Sketch.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ function MM_nbGroup(event, grpName) { //v6.0
                   </ul>
                 </li>
                 <li><a href="web/Latest.html">Latest</a></li>
-                <li><a class="MenuBarItemSubmenu" href="web/comic.php">Comic</a>
+                <li><a class="MenuBarItemSubmenu" href="web/comic.html">Comic</a>
                   <ul>
                     <li><a class="MenuBarItemSubmenu" href="#">Now</a>
                       <ul>
@@ -162,9 +162,9 @@ function MM_nbGroup(event, grpName) { //v6.0
     <tr>
       <td><div align="center"><a href="web/Animation.html" target="_blank" onmouseover="MM_swapImage('Image9','','web/images/b02.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="web/images/b03.jpg" alt="daxiao" name="Image9" width="100" height="100" border="0" id="Image9" /></a></div></td>
       <td><div align="center"><a href="web/Latest.html" target="_blank" onmouseover="MM_swapImage('Image13','','web/images/d03.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="web/images/d02.jpg" alt="nvren" name="Image13" width="100" height="100" border="0" id="Image13" /></a></div></td>
-      <td><div align="center"><a href="web/comic.php" target="_blank" onmouseover="MM_swapImage('Image10','','web/images/e04.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="web/images/e03.jpg" alt="manhua02" name="Image10" width="100" height="100" border="0" id="Image10" /></a></div></td>
+      <td><div align="center"><a href="web/comic.html" target="_blank" onmouseover="MM_swapImage('Image10','','web/images/e04.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="web/images/e03.jpg" alt="manhua02" name="Image10" width="100" height="100" border="0" id="Image10" /></a></div></td>
       <td><div align="center"><a href="/blog2.html" target="_blank" onmouseover="MM_swapImage('Image11','','web/images/g02.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="web/images/g03.jpg" alt="wordpress" name="Image11" width="100" height="100" border="0" id="Image11" /></a></div></td>
-      <td><div align="center"><a href="web/Sketch.php" target="_blank" onmouseover="MM_swapImage('Image14','','web/images/f03.jpg',0)" onmouseout="MM_swapImgRestore()"><img src="web/images/f04.jpg" alt="book" name="Image14" width="100" height="100" border="0" id="Image14" /></a></div></td>
+      <td><div align="center"><a href="web/Sketch.html" target="_blank" onmouseover="MM_swapImage('Image14','','web/images/f03.jpg',0)" onmouseout="MM_swapImgRestore()"><img src="web/images/f04.jpg" alt="book" name="Image14" width="100" height="100" border="0" id="Image14" /></a></div></td>
       <td><div align="center"><a href="web/Pictures.html" target="_blank" onmouseover="MM_swapImage('Image8','','web/images/c02.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="web/images/c023.jpg" alt="ANDACHONG" name="Image8" width="100" height="100" border="0" id="Image8" /></a></div></td>
       <td><a href="/web/contact.html" target="_blank" onmouseover="MM_swapImage('Image12','','web/images/a02.jpg',1)" onmouseout="MM_swapImgRestore()"><img src="web/images/a03.jpg" alt="nadao" name="Image12" width="100" height="100" border="0" id="Image12" /></a></td>
     </tr>
