--- a/lab/next-lab/wow-picture.html
+++ b/lab/next-lab/wow-picture.html
@@ -11,7 +11,7 @@
     <area shape="poly" coords="219,293" href="#" />
     <area shape="poly" coords="218,292,239,312,211,329,195,338,189,354,183,363,182,373,192,379,192,396,199,447,219,456,258,466,433,461,456,374,466,366,465,354,459,348,455,330,447,326,434,325,432,316,433,305,420,300,437,290,451,285,390,264,298,272,287,268,273,281,219,293,219,293" href="../../web/Pictures.html" target="_blank" />
     <area shape="poly" coords="783,332,783,358,787,363,783,370,780,422,842,427,845,366,843,363,848,357,848,336,783,332" href="../../web/Latest.html" target="_blank" />
-    <area shape="poly" coords="478,317,491,325,613,325,639,330,638,341,636,356,636,384,626,424,629,451,486,453,474,435,469,348,460,347,463,339,473,322" href="../../web/Sketch.php" target="_blank" alt="Sketch" />
+    <area shape="poly" coords="478,317,491,325,613,325,639,330,638,341,636,356,636,384,626,424,629,451,486,453,474,435,469,348,460,347,463,339,473,322" href="../../web/Sketch.html" target="_blank" alt="Sketch" />
   </map>
 </div>
 </body>
