--- a/web/blog.html
+++ b/web/blog.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Blog浼犻€侀棬</title>
-<script src="SpryAssets/SpryCollapsiblePanel.js" type="text/javascript"></script>
-<link href="SpryAssets/SpryCollapsiblePanel.css" rel="stylesheet" type="text/css" />
+<title>Blog传送门</title>
+<script src="../SpryAssets/SpryCollapsiblePanel.js" type="text/javascript"></script>
+<link href="../SpryAssets/SpryCollapsiblePanel.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -16,26 +16,26 @@
     <tr>
       <td><div id="CollapsiblePanel1" class="CollapsiblePanel">
         <div class="CollapsiblePanelTab" tabindex="0">
-          <div align="center"><font color="#6699CC">Here锛佹姌鍙?/font></div>
+          <div align="center"><font color="#6699CC">Here！折叠</font></div>
         </div>
         <div class="CollapsiblePanelContent">
           <div align="left"><font color="#999999" size="2"><b><br />
-            棰撳簾鍔ㄧ敾浜?/b></font><br />
-            <a href="blog"><img src="web/images/rgdbdb2.jpg" alt="rui" width="297" height="80" border="0" /></a><br />
+            颓废动画人</b></font><br />
+            <a href="blog"><img src="images/rgdbdb2.jpg" alt="rui" width="297" height="80" border="0" /></a><br />
             <br />
-            <font color="#999999" size="2"><b>XUAN锛氱湡瀹炵殑姊﹀</b></font><br />
-            <a href="xuan"><img src="web/images/rgdbdb.jpg" alt="xuan" width="297" height="70" border="0" /></a><br />
-          <br />
+            <font color="#999999" size="2"><b>XUAN：真实的梦境</b></font><br />
+            <a href="xuan"><img src="images/rgdbdb.jpg" alt="xuan" width="297" height="70" border="0" /></a><br />
+            <br />
           <font color="#999999" size="3">or
           you?</font><br />
-          <a href="web/contact.html"><img src="web/images/rgbdb3.jpg" alt="or you?" width="297" height="75" border="0" /></a><br />
+          <a href="contact.html"><img src="images/rgbdb3.jpg" alt="or you?" width="297" height="75" border="0" /></a><br />
           </div>
         </div>
       </div></td>
     </tr>
   </table>
 </div>
-<p align="center"><img src="web/images/buzz.jpg" width="300" height="479" alt="buzz" /></p>
+<p align="center"><img src="images/buzz.jpg" width="300" height="479" alt="buzz" /></p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
